data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4489.wast
;; 8. **Test Description**: Provide a sequence of `call_indirect` instructions that progressively increase table indices, ending with an index just out of range, checking for correct boundary handling and trapping.    - **Constraint Checked**: Table indexing and boundary conditions.    - **Relation to Improper Handling**: Ensures robust boundary and range checks to prevent improper function calls.

(assert_invalid 
  (module 
    (type (func (param i32) (result i32))) 
    (table 2 funcref) 
    (func $test (param i32) (result i32) 
      (call_indirect (type 0) (local.get 0)) 
      (call_indirect (type 0) (i32.const 1)) 
      (call_indirect (type 0) (i32.const 2))
    )
  ) 
  "out of bounds table index"
)